Fix unnatural linebreaks in mobile AcademicScheduleSection

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -2054,6 +2054,10 @@ a {
         strong {
             margin-right: 8px;
         }
+
+        span, strong {
+            display: inline-block;
+        }
     }
 }
 
